--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,9 @@ script:
 - make coverage
 deploy:
   provider: pypi
-  user: nimbis
+  user: "nimbis"
   password:
-    secure: kSjTGD6faKv5jtDJd1auCIdHB9Jbn0VYmGGqRo2hdZeMHpIL9q/L5sNE84cFngqDMQnDYsv28V5aWK1ndy+1EwEH/FW79L41e6TDy7IFowbXb5FRaQFSq2YuZ1+h/ETSeY8Qbxa5t6ttKxxF6vDgMUKGKjP66I7t4xFxFTzdWfs=
+    secure: "kSjTGD6faKv5jtDJd1auCIdHB9Jbn0VYmGGqRo2hdZeMHpIL9q/L5sNE84cFngqDMQnDYsv28V5aWK1ndy+1EwEH/FW79L41e6TDy7IFowbXb5FRaQFSq2YuZ1+h/ETSeY8Qbxa5t6ttKxxF6vDgMUKGKjP66I7t4xFxFTzdWfs="
   on:
     branch: master
     tags: true
