--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ env:
   global:
     - NIFTY_TRAVIS_CACHE_REPO=https://github.com/nimbis/travis-cache-public.git
 install:
+  - pip install --upgrade setuptools
   - make reqs
 before_script:
   - git clone https://github.com/nimbis/nifty.git ./.nifty
